cambios en los colores de enlaces

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #58a6ff !important;
 		}
 
 	strong, b {
@@ -1848,7 +1848,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #58a6ff;
 		}
 
 	select {
@@ -2772,7 +2772,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #c9d3ec;
+					color: #58a6ff;
 				}
 
 		#header > nav {
