--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3076,7 +3076,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #58a6ff;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
